--- a/exercicios/desafio012/style.css
+++ b/exercicios/desafio012/style.css
@@ -34,6 +34,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3.5vw;
 }
 section.normal{
     background-color: white;
@@ -45,7 +47,8 @@ section.imagem{
 }
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.514);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 footer{
     background-color: black;
